--- a/client/src/app/components/books/edit-book/edit-book.component.css
+++ b/client/src/app/components/books/edit-book/edit-book.component.css
@@ -1,44 +1,77 @@
 form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 15px;
+  gap: 25px;
+  padding: 25px;
+  width: 500px;
+  max-width: 100%;
+  box-sizing: border-box;
+ 
 }
 
-mat-form-field {
+.p-dialog .p-dialog-content {
+  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.p-dialog .p-dialog-mask {
+  transition: opacity 0.3s ease-out;
+}
+
+.p-field {
+  margin-bottom: 15px;
+}
+
+.p-field label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.p-field input,
+.p-field textarea,
+.p-dropdown {
   width: 100%;
 }
 
-.mat-form-row {
-  display: flex;
-  gap: 20px;
-  justify-content: space-between;
+.radio-btn{
+  margin:11px;
 }
 
-.mat-form-row mat-form-field {
-  flex: 1;
+.p-dropdown .p-dropdown-label {
+  width: 100%;
 }
 
-button {
-  width: auto;
+.p-dropdown .p-dropdown-items {
+  max-height: 250px; 
+}
+
+.p-inputTextarea {
+  resize: vertical; 
+}
+
+.select {
+  height: 130px !important;
 }
 
 button-container {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-  margin-top: 10px;
+}
+
+button {
+  width: auto;
 }
 
 .cancel-button:hover {
   color: white;
-  background-color:  rgb(235, 23, 23);
+  background-color: rgb(235, 23, 23);
 }
 
 .save-button:hover {
-  background-color:  blue;
+  background-color: blue;
   color: white;
 }
+
 mat-checkbox {
   margin-top: 10px;
 }
@@ -56,11 +89,57 @@ h3 {
     gap: 10px;
   }
 
-  .mat-form-row {
-    flex-direction: column;
-  }
-
-  .mat-form-row mat-form-field {
+  mat-form-field {
     width: 100%;
   }
 }
+
+
+.p-dropdown {
+  width: 100%;
+}
+
+
+.p-field {
+  margin-bottom: 15px;
+  display: block; 
+}
+
+.p-field input,
+.p-field textarea,
+.p-dropdown {
+  width: 100%;
+}
+
+
+.p-dialog .p-dialog-content {
+  padding: 20px;
+  max-height: calc(100vh - 120px); 
+  overflow-y: auto; 
+}
+
+.p-dropdown .p-dropdown-label {
+  width: 100%;
+}
+
+.p-dropdown .p-dropdown-items {
+  max-height: 250px;
+}
+
+
+small.p-error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.previous-button {
+  margin-top: 5px;
+  /* background-color: #f44336; */
+  color: rgb(12, 12, 12);
+  border: none;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
