-added cart and designed notification

--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -124,7 +124,7 @@
         <div *ngIf="!isForgotPassword" class="form-footer mt-3">
           <p>
             Don’t have an account?
-            <button class="sign-up-btn" routerLink="register">Sign up</button>
+            <button class="sign-up-btn" routerLink="register">Register Here</button>
           </p>
         </div>
       </p-card>
