--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -154,7 +154,7 @@
         <div class="form-footer mt-3">
           <p>
             Already have an account?
-            <button class="sign-in-btn" routerLink="/login">Login here</button>
+            <button class="sign-in-btn" routerLink="/login">Login Here</button>
           </p>
         </div>
       </p-card>
