--- a/client/src/app/components/partials/not-found/not-found.component.css
+++ b/client/src/app/components/partials/not-found/not-found.component.css
@@ -38,6 +38,8 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  border: 0px;
+  margin: 0px 0px 0px 167px;
 }
 
 .back-btn:hover {
