--- a/client/src/app/components/partials/not-found/not-found.component.html
+++ b/client/src/app/components/partials/not-found/not-found.component.html
@@ -1,19 +1,18 @@
 <div class="error-container">
-    <ng-lottie [options]="options" class="lottie-animation"></ng-lottie>
-  
-    <div class="error-content">
-      <h1>404</h1>
-      <p>Oops! The page you are looking for does not exist.</p>
-  
+  <ng-lottie [options]="options" class="lottie-animation"></ng-lottie>
+
+  <div class="error-content">
+    <h1>404</h1>
+    <p>Oops! The page you are looking for does not exist.</p>
+    <div>
       <button
-        mat-mini-fab
+        class="back-btn"
         color="primary"
         matTooltip="Go Back"
-        class="btn back-btn"
         routerLink="/book/list"
       >
         <i class="pi pi-angle-double-left me-4"></i> Go Back
       </button>
     </div>
   </div>
-  
+</div>
