--- a/client/src/app/auth/forgot-password/forgot-password.component.html
+++ b/client/src/app/auth/forgot-password/forgot-password.component.html
@@ -48,7 +48,7 @@
 
     <div *ngIf="otpVerified" class="reset-password-container">
       <div class="form-field w-100">
-        <p-floatLabel class="w-100 ">
+        <p-floatLabel class="w-100">
           <p-password
             formControlName="newPassword"
             toggleMask="true"
@@ -63,8 +63,8 @@
         </p-floatLabel>
       </div>
 
-      <div class="form-field w-100 ">
-        <p-floatLabel class="w-100 ">
+      <div class="form-field w-100">
+        <p-floatLabel class="w-100">
           <p-password
             formControlName="confirmPassword"
             toggleMask="true"
@@ -93,9 +93,7 @@
   <div class="form-footer mt-3">
     <p>
       Remember your password?
-      <button class="sign-up-btn" (click)="backToLogin()">
-        Login 
-      </button>
+      <button class="sign-up-btn" (click)="backToLogin()">Login</button>
     </p>
   </div>
 </div>
