--- a/client/src/app/components/user/edit-user/edit-user.component.html
+++ b/client/src/app/components/user/edit-user/edit-user.component.html
@@ -22,11 +22,9 @@
   </mat-form-field>
 
   <div class="button-container">
-    <button mat-button (click)="close()" class="cancel-button">
-      Cancel
-    </button>
+    <button mat-button (click)="close()" class="cancel-button">Cancel</button>
     <button
-    class="save-button"
+      class="save-button"
       mat-button
       color="primary"
       type="submit"
@@ -36,7 +34,6 @@
     </button>
   </div>
 </form>
-
 
 <div class="card flex justify-center">
   <p-toast></p-toast>
