--- a/client/src/styles/themes/light-theme.scss
+++ b/client/src/styles/themes/light-theme.scss
@@ -1,4 +1,4 @@
-$primary-color: #3D83C4;  // Example color
-$secondary-color: #03DAC6;  // Example color
-$background-color: #121212;  // Example color
-$font-color: #FFFFFF;  // Example color
+$primary-color: #3D83C4;  
+$secondary-color: #03DAC6;  
+$background-color: #121212; 
+$font-color: #FFFFFF;  
