--- a/client/src/app/components/notification/notification.component.html
+++ b/client/src/app/components/notification/notification.component.html
@@ -3,15 +3,19 @@
 </div>
 
 <div class="notification-container">
-  
   <div *ngIf="today.length">
     <h3>Today</h3>
     <div class="notification-list">
-      <div *ngFor="let notification of today" class="notification" 
-           (mouseenter)="notification.showDelete = true" 
-           (mouseleave)="notification.showDelete = false">
+      <div
+        *ngFor="let notification of today"
+        class="notification"
+        (mouseenter)="notification.showDelete = true"
+        (mouseleave)="notification.showDelete = false"
+      >
         <div class="notification-header">
-          <span class="timestamp">{{ notification.date | date:'shortTime' }}</span>
+          <span class="timestamp">{{
+            notification.date | date : "shortTime"
+          }}</span>
         </div>
         <div class="notification-type">
           <strong>{{ notification.type }}:</strong>
@@ -20,10 +24,15 @@
           {{ notification.content }}
         </div>
         <div class="notification-footer">
-          <i class="pi pi-trash delete-icon" 
-             [ngClass]="{'visible': notification.showDelete}" 
-             (click)="notification.showDelete = true; deleteNotification(notification, 'today')" 
-             matTooltip="Delete"></i>
+          <i
+            class="pi pi-trash delete-icon"
+            [ngClass]="{ visible: notification.showDelete }"
+            (click)="
+              notification.showDelete = true;
+              deleteNotification(notification, 'today')
+            "
+            matTooltip="Delete"
+          ></i>
         </div>
       </div>
     </div>
@@ -32,11 +41,16 @@
   <div *ngIf="yesterday.length">
     <h3>Yesterday</h3>
     <div class="notification-list">
-      <div *ngFor="let notification of yesterday" class="notification"
-           (mouseenter)="notification.showDelete = true" 
-           (mouseleave)="notification.showDelete = false">
+      <div
+        *ngFor="let notification of yesterday"
+        class="notification"
+        (mouseenter)="notification.showDelete = true"
+        (mouseleave)="notification.showDelete = false"
+      >
         <div class="notification-header">
-          <span class="timestamp">{{ notification.date | date:'shortTime' }}</span>
+          <span class="timestamp">{{
+            notification.date | date : "shortTime"
+          }}</span>
         </div>
         <div class="notification-type">
           <strong>{{ notification.type }}:</strong>
@@ -45,10 +59,15 @@
           {{ notification.content }}
         </div>
         <div class="notification-footer">
-          <i class="pi pi-trash delete-icon" 
-             [ngClass]="{'visible': notification.showDelete}" 
-             (click)="notification.showDelete = true; deleteNotification(notification, 'yesterday')" 
-             matTooltip="Delete"></i>
+          <i
+            class="pi pi-trash delete-icon"
+            [ngClass]="{ visible: notification.showDelete }"
+            (click)="
+              notification.showDelete = true;
+              deleteNotification(notification, 'yesterday')
+            "
+            matTooltip="Delete"
+          ></i>
         </div>
       </div>
     </div>
@@ -57,11 +76,16 @@
   <div *ngIf="older.length">
     <h3>Older</h3>
     <div class="notification-list">
-      <div *ngFor="let notification of older" class="notification"
-           (mouseenter)="notification.showDelete = true" 
-           (mouseleave)="notification.showDelete = false">
+      <div
+        *ngFor="let notification of older"
+        class="notification"
+        (mouseenter)="notification.showDelete = true"
+        (mouseleave)="notification.showDelete = false"
+      >
         <div class="notification-header">
-          <span class="timestamp">{{ notification.date | date:'shortTime' }}</span>
+          <span class="timestamp">{{
+            notification.date | date : "shortTime"
+          }}</span>
         </div>
         <div class="notification-type">
           <strong>{{ notification.type }}:</strong>
@@ -70,13 +94,17 @@
           {{ notification.content }}
         </div>
         <div class="notification-footer">
-          <i class="pi pi-trash delete-icon" 
-             [ngClass]="{'visible': notification.showDelete}" 
-             (click)="notification.showDelete = true; deleteNotification(notification, 'older')" 
-             matTooltip="Delete"></i>
+          <i
+            class="pi pi-trash delete-icon"
+            [ngClass]="{ visible: notification.showDelete }"
+            (click)="
+              notification.showDelete = true;
+              deleteNotification(notification, 'older')
+            "
+            matTooltip="Delete"
+          ></i>
         </div>
       </div>
     </div>
   </div>
-
 </div>
