--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -1,54 +1,107 @@
-<div class="m-2"><h1 style="width: 200px ">USER LIST:</h1></div>
+<div class="m-2"><h1 style="width: 200px">USER LIST:</h1></div>
 
-<div class="m-3 mb-3"> <mat-card-content class="tab ">
-  
-  <table mat-table [dataSource]="users">
-    <ng-container matColumnDef="serialNo">
-      <th mat-header-cell [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>Serial No</th>
-      <td mat-cell *matCellDef="let user; let i = index">{{ i + 1 }}.</td>
-    </ng-container>
+<div class="m-3 mb-3">
+  <mat-card-content class="tab">
+    <table mat-table [dataSource]="users">
+      <ng-container matColumnDef="serialNo">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          Serial No
+        </th>
+        <td mat-cell *matCellDef="let user; let i = index">{{ i + 1 }}.</td>
+      </ng-container>
 
-    <ng-container matColumnDef="email">
-      <th mat-header-cell [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-    </ng-container>
+      <ng-container matColumnDef="email">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          Email
+        </th>
+        <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="firstName">
-      <th mat-header-cell [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>firstName</th>
-      <td mat-cell *matCellDef="let user">{{ user.firstName }}</td>
-    </ng-container>
+      <ng-container matColumnDef="firstName">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          firstName
+        </th>
+        <td mat-cell *matCellDef="let user">{{ user.firstName }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="lastName">
-      <th mat-header-cell  [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>lastName</th>
-      <td mat-cell *matCellDef="let user">{{ user.lastName }}</td>
-    </ng-container>
+      <ng-container matColumnDef="lastName">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          lastName
+        </th>
+        <td mat-cell *matCellDef="let user">{{ user.lastName }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="userName">
-      <th mat-header-cell [ngStyle]="{ 'background-color': tableHeaderBgColor }"  class="head" *matHeaderCellDef>userName</th>
-      <td mat-cell *matCellDef="let user">{{ user.userName }}</td>
-    </ng-container>
+      <ng-container matColumnDef="userName">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          userName
+        </th>
+        <td mat-cell *matCellDef="let user">{{ user.userName }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="role">
-      <th mat-header-cell [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>Role</th>
-      <td mat-cell *matCellDef="let user">{{ user.role }}</td>
-    </ng-container>
+      <ng-container matColumnDef="role">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          Role
+        </th>
+        <td mat-cell *matCellDef="let user">{{ user.role }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell  [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let user">
-        <button mat-button class="edit-btn" (click)="editUser(user._id)"><i class="pi pi-pen-to-square " ></i></button>
-        <button mat-button class="delete-btn" (click)="deleteUser(user._id)"> <i class="pi pi-trash " ></i></button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="actions">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          class="head"
+          *matHeaderCellDef
+        >
+          Actions
+        </th>
+        <td mat-cell *matCellDef="let user">
+          <button mat-button class="edit-btn" (click)="editUser(user._id)">
+            <i class="pi pi-pen-to-square"></i>
+          </button>
+          <button mat-button class="delete-btn" (click)="deleteUser(user._id)">
+            <i class="pi pi-trash"></i>
+          </button>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</mat-card-content></div>
-   
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </mat-card-content>
+</div>
 
-  <div class="card flex justify-center">
-    <p-toast></p-toast>
-  
-    <p-confirmDialog></p-confirmDialog>
-  </div>
+<div class="card flex justify-center">
+  <p-toast></p-toast>
+
+  <p-confirmDialog></p-confirmDialog>
+</div>
