--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,3 @@
-
-
 .label-float {
   top: -12px;
   font-size: 13px;
@@ -7,26 +5,33 @@
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-   
-  }
-  
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  font-family: "Inter", sans-serif;
+}
 
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-
-.cancel-button:hover{
+.cancel-button:hover {
   color: white;
   background-color: red;
 }
 
-.save-button:hover{
+.save-button:hover {
   color: white;
   background-color: blue;
 }
-
